--- a/CookPopularControl/Themes/GroupControlsStyle.xaml
+++ b/CookPopularControl/Themes/GroupControlsStyle.xaml
@@ -71,18 +71,19 @@
         <Setter Property="Background" Value="{DynamicResource DefaultBackgroundBrush}" />
         <Setter Property="HorizontalContentAlignment" Value="Center" />
         <Setter Property="VerticalContentAlignment" Value="Center" />
+        <Setter Property="HeaderMargin" Value="0,0,5,0" />
         <Setter Property="Template">
             <Setter.Value>
                 <ControlTemplate TargetType="{x:Type groupCtl:TagEditing}">
                     <Border Background="{TemplateBinding Background}" SnapsToDevicePixels="True"
                             CornerRadius="{TemplateBinding attached:FrameworkElementBaseAttached.CornerRadius}">
                         <DockPanel>
-                            <ContentPresenter Content="{TemplateBinding Header}" Margin="0,0,8,0"
+                            <ContentPresenter Content="{TemplateBinding Header}" Margin="{TemplateBinding HeaderMargin}"
                                               DockPanel.Dock="{TemplateBinding Position}"
                                               HorizontalAlignment="{TemplateBinding HorizontalContentAlignment}"
                                               VerticalAlignment="{TemplateBinding VerticalContentAlignment}"/>
                             <TextBox Text="{Binding RelativeSource={RelativeSource Mode=TemplatedParent},Path=Content,Mode=TwoWay,UpdateSourceTrigger=PropertyChanged}"         
-                                     Height="{TemplateBinding Height}" Padding="6,0" BorderBrush="{TemplateBinding BorderBrush}" BorderThickness="{TemplateBinding BorderThickness}"
+                                     Height="{TemplateBinding Height}" Padding="2" BorderBrush="{TemplateBinding BorderBrush}" BorderThickness="{TemplateBinding BorderThickness}"
                                      attached:TextElementAttached.PlaceHolder="{TemplateBinding attached:TextElementAttached.PlaceHolder}"
                                      attached:TextElementAttached.IsAddClearButton="{TemplateBinding attached:TextElementAttached.IsAddClearButton}"
                                      attached:FrameworkElementBaseAttached.IconWidth="{TemplateBinding attached:FrameworkElementBaseAttached.IconWidth}"
