--- a/CookPopularControl/Themes/BaseStyle/AlertorStyle.xaml
+++ b/CookPopularControl/Themes/BaseStyle/AlertorStyle.xaml
@@ -1,9 +1,11 @@
 ﻿<ResourceDictionary xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
                     xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
-                    xmlns:others="clr-namespace:CookPopularControl.Controls.Others">
+                    xmlns:others="clr-namespace:CookPopularControl.Controls.Others"
+                    xmlns:panel="clr-namespace:CookPopularControl.Controls.Panels">
 
     <Style x:Key="DefaultAlertorStyle" TargetType="{x:Type others:Alertor}">
         <Setter Property="Foreground" Value="{DynamicResource PrimaryColorTheme}" />
+        <Setter Property="Background" Value="Transparent" />
         <Setter Property="Template">
             <Setter.Value>
                 <ControlTemplate TargetType="{x:Type others:Alertor}">
@@ -28,10 +30,33 @@
                             <ColorAnimation Duration="0:0:1" To="#990000" RepeatBehavior="Forever"
                                             Storyboard.TargetName="PART_Alarm" Storyboard.TargetProperty="(Shape.Fill).(SolidColorBrush.Color)"/>
                         </Storyboard>
+
+                        <Storyboard x:Key="RotateAlarmStoryboard">
+                            <DoubleAnimation Duration="0:0:2" To="360" RepeatBehavior="Forever"
+                                             Storyboard.TargetName="PART_Alarm" Storyboard.TargetProperty="(UIElement.RenderTransform).(TransformGroup.Children)[0].(RotateTransform.Angle)"/>
+                        </Storyboard>
                     </ControlTemplate.Resources>
-                    <Border Background="{TemplateBinding Background}" SnapsToDevicePixels="True" ToolTip="{TemplateBinding CurrentState}">
-                        <Path x:Name="PART_Alarm" Data="{DynamicResource AlertorGeometry}" Fill="{TemplateBinding Foreground}" Stretch="Uniform"/>
-                    </Border>
+                    <Grid Background="{TemplateBinding Background}" SnapsToDevicePixels="True">
+                        <Grid.RowDefinitions>
+                            <RowDefinition />
+                            <RowDefinition Height="30"/>
+                        </Grid.RowDefinitions>
+                        <Path Grid.Row="0" x:Name="PART_Alarm" Data="{DynamicResource AlertorGeometry}" Fill="{TemplateBinding Foreground}" Stretch="Uniform" RenderTransformOrigin="0.5,0.5">
+                            <Path.RenderTransform>
+                                <TransformGroup>
+                                    <RotateTransform Angle="0"/>
+                                </TransformGroup>
+                            </Path.RenderTransform>
+                        </Path>
+                        <TextBlock Grid.Row="1" Text="{Binding RelativeSource={RelativeSource Mode=TemplatedParent},Path=CurrentState}" 
+                                   Foreground="{Binding ElementName=PART_Alarm,Path=Fill}" FontSize="18" FontWeight="DemiBold"
+                                   HorizontalAlignment="Center" VerticalAlignment="Bottom"/>
+                    </Grid>
+                    <ControlTemplate.Triggers>
+                        <EventTrigger RoutedEvent="Loaded">
+                            <BeginStoryboard Storyboard="{StaticResource RotateAlarmStoryboard}"/>
+                        </EventTrigger>
+                    </ControlTemplate.Triggers>
                 </ControlTemplate>
             </Setter.Value>
         </Setter>
